--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
 # url:
-url:              https://fanshaohua-fan.github.io
+url:              //fanshaohua-fan.github.io
 
 # Owner/author information
 owner:
